--- a/07-async-code-fetch-api-part-1/2-sortable-table-v3/style.css
+++ b/07-async-code-fetch-api-part-1/2-sortable-table-v3/style.css
@@ -157,6 +157,15 @@ body {
   display: grid;
 }
 
+/* Loader */
+img[data-element='loader'] {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 20;
+}
+
 /* Loading line */
 
 .sortable-table__loading-line {
