09-tests-for-frontend-apps v.1.0

--- a/09-tests-for-frontend-apps/2-sortable-list/style.css
+++ b/09-tests-for-frontend-apps/2-sortable-list/style.css
@@ -111,3 +111,16 @@ body {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
+/* Custom style */
+
+#holder > ul > li {
+  margin: 1rem;
+  padding: 1rem;
+  border: 1px solid gray;
+  background-color: lightsteelblue;
+}
+
+#holder > ul > li:hover {
+  background-color: mediumorchid;
+}
